apps/overlays/it/patch/sample-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app
  labels:
    deployment: it-sample-app
spec:
  selector:
    matchLabels:
      app: it-sample-app
  template:
    metadata:
      labels:
        app: it-sample-app
    spec:
      containers:
        - name: sample-app
          image: image-registry.openshift-image-registry.svc:5000/jiadchen-dev/sample-app:5bb5d516519186807c991918de46af7576458a05
