apps/overlays/it/patch/sample-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-app
  labels:
    route: it-sample-app
spec:
  to:
    kind: Service
    name: it-sample-app
